@@ -94,6 +94,8 @@ typedef enum {
     PSLR_JPEG_IMAGE_TONE_REVERSAL_FILM,
     PSLR_JPEG_IMAGE_TONE_BLEACH_BYPASS,
     PSLR_JPEG_IMAGE_TONE_RADIANT,
+    PSLR_JPEG_IMAGE_TONE_CROSS_PROCESSING,
+    PSLR_JPEG_IMAGE_TONE_FLAT,
     PSLR_JPEG_IMAGE_TONE_MAX
 } pslr_jpeg_image_tone_t;
 
